# DAVINCI

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DERECHO.md  GDEX.md  LICENSE  PERFORMANCE.md  PLAN.md  PLAN_BLENDER.md  PLAN_DC3.md  PLAN_ML.md  PLAN_MODEL.md  PLAN_MODIS.md  README.md  REVIEW_CODEX.md  TECHDEBT.md  TODO.md  VALIDATION.md  environment.yml  pyproject.toml
.claude/commands/: design-review-auto.md  design-review.md  plume-sentinel.md
.claude/workflows/: design-review.js
.gemini/skills/: plume-sentinel.skill
.gemini/skills/plume-sentinel/: SKILL.md
.github/workflows/: ci.yml
analyses/: README.md
analyses/_gallery/: make_gallery.py  run_gallery.py
analyses/asia-aq/: .gitignore  README.md
analyses/asia-aq/configs/: asia-aq-aeronet-derecho.yaml  asia-aq-aeronet-gemini.yaml  asia-aq-airnow-derecho.yaml  asia-aq-airnow-gemini.yaml  asia-aq-airnow.example.yaml  asia-aq-dc8-derecho.yaml  asia-aq-dc8-gemini.yaml  asia-aq-derecho-1day-work.yaml  asia-aq-derecho-1day.yaml  asia-aq-derecho.yaml  asia-aq-gemini.yaml  asia-aq-obs-aeronet-gemini.yaml  asia-aq-obs-airnow-gemini.yaml  asia-aq-obs-dc8-gemini.yaml  asia-aq-obs-pandora-gemini.yaml  asia-aq-pandora-derecho.yaml  asia-aq-pandora-gemini.yaml  asia-aq-scratch.yaml  asia-aq.yaml  cesm_airnow_aeronet.yaml
analyses/asia-aq/misc/: cesm_surface.yaml  download_openaq.py  explore_dataset.py  explore_model.py  plot_dataset_spatial.py  plot_model_spatial.py  test_cesm_reader.py
analyses/asia-aq/scripts/: compute_no2_column.py  download_airnow.py  download_geometries.py  download_observations.py  preprocess_pandora.py  run_evaluation.py
analyses/ceres/: .gitignore
analyses/ceres-smoke/configs/: firex-aq-williams-flats-2019.yaml
analyses/dc3/: README.md
analyses/dc3/configs/: dc3-may29-gemini.yaml  (+9 more)
analyses/firex-aq/: README.md
analyses/merra2-aod/: .gitignore
analyses/west-coast-smoke/: .gitignore
analyses/wrfchem-forecast/: README.md
davinci_monet/: __init__.py
davinci_monet/ai/: __init__.py  images.py  openrouter.py  payload.py  summarizer.py
davinci_monet/analysis/: __init__.py  base.py  eof.py  reductions.py  wavelet.py
davinci_monet/assets/: __init__.py  logo.py  nsf_ncar_logo.txt
davinci_monet/cli/: __init__.py  app.py
davinci_monet/config/: __init__.py  migration.py  parser.py  schema.py
davinci_monet/core/: __init__.py  base.py  exceptions.py  protocols.py  registry.py  schema_utils.py  types.py
davinci_monet/datasets/: __init__.py  base.py  cesm.py  cmaq.py  generic.py  merra2.py  ufs.py  wrfchem.py
davinci_monet/geography/: __init__.py  domains.py
davinci_monet/io/: __init__.py  reader_utils.py  readers.py  source_registration.py  writers.py
davinci_monet/logging/: __init__.py  config.py
davinci_monet/models/: __init__.py  base.py  cesm.py  cmaq.py  generic.py  merra2.py  ufs.py  wrfchem.py
davinci_monet/observations/: __init__.py  base.py
davinci_monet/pairing/: __init__.py  direction.py  engine.py  grid_binning.py
davinci_monet/pipeline/: __init__.py  display.py  lifecycle.py  parallel.py  progress.py  reporting.py  runner.py  stages.py
davinci_monet/plots/: __init__.py  _stats.py  base.py  contracts.py  labeling.py  labels.py  obs_base.py  plot_config.py  registry.py  series.py  style.py  titles.py
davinci_monet/radiative/: __init__.py  config.py  processing.py  processing_rt_levels.py  rt.py  runner.py
davinci_monet/stats/: __init__.py  calculator.py  metrics.py  output.py
davinci_monet/tests/: conftest.py  test_ceres_l3_readers.py  test_ceres_ssf_reader.py  test_cli.py  test_cli_e2e.py  test_config_grid_method.py  test_config_xy_pairs.py  test_dataset_readers.py  test_dataset_source_labels.py  test_domain_filter.py  test_download_ceres.py  test_download_earthdata.py  test_download_merra2.py  test_geometry_pipeline.py  test_geometry_readers.py  test_icartt_units.py  test_integration.py  test_intermediate_grid.py  test_io.py  test_lma_reader.py  test_load_sources_stage.py  test_merra2_reader.py  test_metrics_extraction.py  test_model_readers.py  test_obs_pipeline.py  test_obs_plots.py  test_obs_source_labels.py  test_observation_readers.py  test_pair_direction.py  test_paired_axis_tags.py  test_paired_role_tags.py  test_paired_source_labels.py  test_pairing.py  test_pairing_executor.py  test_per_site_timeseries.py  test_phase5_plots.py  test_pipeline.py  test_plots.py  test_plotting_var_resolution.py  test_plume_sentinel_workflow.py  (+16 more)
davinci_monet/util/: domain.py
docs/: PLOTTING_ALTERNATIVES.md
docs/audits/: 2026-06-14-renderer-audit.md
docs/campaigns/: ASIA-AQ-RESEARCH.md  ASIA-AQ.md  DC3.md
docs/plans/: 2026-03-01-obs-only-plots-dc3-design.md  2026-03-01-obs-only-plots-dc3.md  2026-03-02-lma-density-maps-design.md  2026-03-02-lma-density-maps.md  2026-03-08-swath-grid-strategy-design.md  2026-03-23-test-ci-improvements-design.md
examples/: README.md  _helpers.py  custom_statistics.py  plot_01_timeseries.py  plot_02_diurnal.py  plot_03_scatter.py  plot_04_taylor.py  plot_05_boxplot.py  plot_06_spatial_bias.py  plot_07_spatial_overlay.py  plot_08_spatial_distribution.py  plot_08_spatial_field.py  plot_09_curtain.py  plot_10_scorecard.py  plot_11_site_timeseries.py  plot_12_flight_timeseries.py  plot_13_track_map_3d.py  plot_14_satellite_swath.py  plot_15_satellite_gridded.py  run_all_examples.py
examples/configs/: cmaq_airnow.yaml
paper/: paper.bib  paper.md
paper/gallery/: asia-aq_statistics.csv  modis_statistics.csv
scripts/: cloud-setup.sh  run_analysis.py
tests/error_configs/: 01_malformed_yaml.yaml  02_bad_indentation.yaml  03_missing_analysis.yaml  04_missing_dataset_files.yaml  04_missing_model_files.yaml  05_invalid_dataset_type.yaml  05_invalid_model_type.yaml  06_invalid_geometry_type.yaml  06_invalid_obs_type.yaml  07_invalid_dates.yaml  08_end_before_start.yaml  09_type_mismatch.yaml  10_invalid_pair_name.yaml  10_invalid_pair_ref.yaml  11_invalid_plot_type.yaml  12_empty_file.yaml  13_corrupt_env_var.yaml  14_duplicate_keys.yaml  15_null_values.yaml  README.md
(+393 files in other folders)
