[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "davinci-monet"
version = "0.1.0"
description = "Model and Observation Evaluation Toolkit - A modern refactor of MELODIES-MONET"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "DAVINCI-MONET Developers"}
]
keywords = [
    "atmospheric chemistry",
    "air quality",
    "model evaluation",
    "observations",
    "meteorology"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.5,<2",
    "xarray>=2022.0",
    "matplotlib>=3.5,<3.9",
    "cartopy>=0.20",
    "netCDF4>=1.5",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "typer[all]>=0.9",
    "monet>=2.2",
    "monetio>=0.2",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.12",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[project.scripts]
davinci-monet = "davinci_monet.cli.app:app"

[project.urls]
Homepage = "https://github.com/your-org/davinci-monet"
Documentation = "https://davinci-monet.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["davinci_monet*"]

[tool.setuptools.package-data]
davinci_monet = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "monet.*",
    "monetio.*",
    "cartopy.*",
    "xarray.*",
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "netCDF4.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["davinci_monet/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["davinci_monet"]
omit = ["davinci_monet/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
