[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "davinci-monet"
version = "26.06"
description = "Data Analysis and Visual Intelligence for Climate - A modern refactor of MELODIES-MONET"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "DAVINCI Developers"}
]
keywords = [
    "atmospheric chemistry",
    "air quality",
    "model evaluation",
    "observations",
    "meteorology"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.5,<2",
    "xarray>=2022.0",
    "matplotlib>=3.5,<3.9",
    "cartopy>=0.20",
    "netCDF4>=1.5",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "typer[all]>=0.9",
    "monet>=2.2",
    "monetio>=0.2",
    "rich>=13.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40",
    "httpx>=0.24",
    "pillow>=10.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.12",
    "anthropic>=0.40",
    "httpx>=0.24",
    "pillow>=10.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[project.scripts]
davinci-monet = "davinci_monet.cli.app:app"

[project.urls]
Homepage = "https://github.com/NCAR/DAVINCI"
Documentation = "https://github.com/NCAR/DAVINCI/wiki"

[tool.setuptools.packages.find]
where = ["."]
include = ["davinci_monet*"]

[tool.setuptools.package-data]
davinci_monet = ["py.typed", "observations/satellite/catalog/data/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = false
check_untyped_defs = true
warn_return_any = false
warn_unused_configs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "monetio.*",
    "cartopy.*",
    "xarray.*",
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "netCDF4.*",
    "rich.*",
    "numba.*",
    "h5py",
    "mpl_toolkits.mplot3d",
    "mpl_toolkits.*",
    "scipy",
    "scipy.ndimage",
    "scipy.*",
    "seaborn",
    "shapely",
    "shapely.geometry",
    "shapely.*",
    "tqdm",
    "tqdm.*",
    "yaml.*",
    "pyhdf",
    "pyhdf.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "davinci_monet.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["davinci_monet/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: end-to-end tests that run PipelineRunner.run_from_config",
]
filterwarnings = [
    "error::UserWarning",
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore::DeprecationWarning:pyparsing.*",
    "ignore:numpy.ndarray size changed:RuntimeWarning",
    "ignore:Polyfit may be poorly conditioned:numpy.RankWarning",
    "ignore::RuntimeWarning:numpy.lib.*",
    "ignore:The return type of `Dataset.dims`:FutureWarning",
]

[tool.coverage.run]
source = ["davinci_monet"]
omit = ["davinci_monet/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
